[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/GameOver.gd" type="Script" id=1]

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 225.0
margin_right = 1024.0
margin_bottom = 256.0
alignment = 1

[node name="Game Feedback" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 475.0
margin_right = 548.0
margin_bottom = 31.0
text = "Game Over
"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 1024.0
margin_bottom = 291.0
alignment = 1

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 490.0
margin_right = 533.0
margin_bottom = 31.0
text = "Score: 
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 295.0
margin_right = 1024.0
margin_bottom = 326.0
alignment = 1

[node name="PreviousHighscore" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 465.0
margin_right = 559.0
margin_bottom = 31.0
text = "Previous Score
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 330.0
margin_right = 1024.0
margin_bottom = 350.0
alignment = 1

[node name="PlayAgain" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 473.0
margin_right = 550.0
margin_bottom = 20.0
text = "Play Again"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 1024.0
margin_bottom = 374.0
alignment = 1

[node name="MainMenu" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 470.0
margin_right = 553.0
margin_bottom = 20.0
text = "Main Menu"

[connection signal="button_down" from="VBoxContainer/HBoxContainer2/PlayAgain" to="." method="_on_PlayAgain_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/MainMenu" to="." method="_on_MainMenu_button_down"]
